# masks

./: .gitignore  README.md  pyproject.toml
masks/: __init__.py  _masks.py  plot.py  reconstruct.py  stats.py  utils.py
masks/simulate/: __init__.py  _simulate.py
notebooks/: 01_gottesman2007.ipynb  02_ura_fenimore1978.ipynb  03_1dsim.ipynb  04_1dsim.ipynb  05_2dmasks.ipynb  06_2sim.ipynb  08_demo.ipynb  09_variance.ipynb  10_iros.ipynb  11_pcfov.ipynb  12_pcfov_2d.ipynb  13_pcfov_2d.ipynb  14_wfm_masks.ipynb  16_catalog_gen.ipynb  demo.ipynb  iros.ipynb  more-iros.ipynb  part1_gottesman2007.ipynb  part2_ura_fenimore1978.ipynb  part3_1dsim.ipynb  part7_2dmlem.ipynb
